--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -488,6 +488,9 @@
              </item>
              <item row="0" column="1" alignment="Qt::AlignTop">
               <widget class="QToolButton" name="toolButton_resetView">
+               <property name="toolTip">
+                <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Reset&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+               </property>
                <property name="text">
                 <string>...</string>
                </property>
@@ -689,6 +692,9 @@
           </item>
           <item row="0" column="1" alignment="Qt::AlignTop">
            <widget class="QToolButton" name="toolButton_resetRot">
+            <property name="toolTip">
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Reset&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+            </property>
             <property name="text">
              <string>...</string>
             </property>
