--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -407,7 +407,7 @@
              <item row="0" column="0">
               <layout class="QFormLayout" name="formLayout_5">
                <item row="0" column="1">
-                <widget class="QDoubleSpinBox" name="doubleSpinBox_view_beta">
+                <widget class="QDoubleSpinBox" name="doubleSpinBox_theta">
                  <property name="prefix">
                   <string/>
                  </property>
@@ -426,7 +426,7 @@
                 </widget>
                </item>
                <item row="2" column="1">
-                <widget class="QDoubleSpinBox" name="doubleSpinBox_view_alpha">
+                <widget class="QDoubleSpinBox" name="doubleSpinBox_psy">
                  <property name="prefix">
                   <string/>
                  </property>
@@ -444,8 +444,22 @@
                  </property>
                 </widget>
                </item>
+               <item row="2" column="0">
+                <widget class="QLabel" name="label_9">
+                 <property name="text">
+                  <string>ψ:</string>
+                 </property>
+                </widget>
+               </item>
+               <item row="0" column="0">
+                <widget class="QLabel" name="label_7">
+                 <property name="text">
+                  <string>θ:</string>
+                 </property>
+                </widget>
+               </item>
                <item row="1" column="1">
-                <widget class="QDoubleSpinBox" name="doubleSpinBox_view_gamma">
+                <widget class="QDoubleSpinBox" name="doubleSpinBox_phi">
                  <property name="prefix">
                   <string/>
                  </property>
@@ -464,23 +478,9 @@
                 </widget>
                </item>
                <item row="1" column="0">
-                <widget class="QLabel" name="label_9">
-                 <property name="text">
-                  <string>γ:</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="0" column="0">
-                <widget class="QLabel" name="label_7">
-                 <property name="text">
-                  <string>β:</string>
-                 </property>
-                </widget>
-               </item>
-               <item row="2" column="0">
                 <widget class="QLabel" name="label_11">
                  <property name="text">
-                  <string>α:</string>
+                  <string>φ:</string>
                  </property>
                 </widget>
                </item>
