--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -283,7 +283,6 @@
               <height>300</height>
              </size>
             </property>
-            <zorder>groupBox_input</zorder>
            </widget>
           </item>
          </layout>
@@ -359,6 +358,9 @@
            <property name="decimals">
             <number>5</number>
            </property>
+           <property name="maximum">
+            <double>99999.990000000005239</double>
+           </property>
            <property name="singleStep">
             <double>0.000100000000000</double>
            </property>
@@ -390,7 +392,7 @@
         </layout>
        </item>
        <item row="6" column="0" colspan="3">
-        <widget class="QGroupBox" name="groupBox_3">
+        <widget class="QGroupBox" name="groupBox_particlePreivew">
          <property name="title">
           <string>Preview of Particle</string>
          </property>
@@ -733,7 +735,7 @@
     <enum>TopToolBarArea</enum>
    </attribute>
    <attribute name="toolBarBreak">
-    <bool>true</bool>
+    <bool>false</bool>
    </attribute>
    <addaction name="separator"/>
   </widget>
