--- a/src/ui/MainWindow.ui
+++ b/src/ui/MainWindow.ui
@@ -76,9 +76,6 @@
               <property name="suffix">
                <string> °</string>
               </property>
-              <property name="decimals">
-               <number>5</number>
-              </property>
               <property name="minimum">
                <double>-360.000000000000000</double>
               </property>
@@ -99,9 +96,6 @@
               <property name="suffix">
                <string> °</string>
               </property>
-              <property name="decimals">
-               <number>5</number>
-              </property>
               <property name="minimum">
                <double>-360.000000000000000</double>
               </property>
@@ -121,9 +115,6 @@
              <widget class="QDoubleSpinBox" name="doubleSpinBox_alpha">
               <property name="suffix">
                <string> °</string>
-              </property>
-              <property name="decimals">
-               <number>5</number>
               </property>
               <property name="minimum">
                <double>-360.000000000000000</double>
@@ -204,9 +195,6 @@
                 <verstretch>0</verstretch>
                </sizepolicy>
               </property>
-              <property name="decimals">
-               <number>5</number>
-              </property>
               <property name="maximum">
                <double>99999.990000000005239</double>
               </property>
@@ -247,9 +235,6 @@
             </item>
             <item row="3" column="1">
              <widget class="QDoubleSpinBox" name="doubleSpinBox_height">
-              <property name="decimals">
-               <number>3</number>
-              </property>
               <property name="maximum">
                <double>9999999.000000000000000</double>
               </property>
@@ -264,9 +249,6 @@
             </item>
             <item row="4" column="1">
              <widget class="QDoubleSpinBox" name="doubleSpinBox_diameter">
-              <property name="decimals">
-               <number>3</number>
-              </property>
               <property name="minimum">
                <double>0.000000000000000</double>
               </property>
@@ -276,17 +258,14 @@
              </widget>
             </item>
             <item row="5" column="0">
-             <widget class="QLabel" name="label_additional">
+             <widget class="QLabel" name="label_cavAngle">
               <property name="text">
-               <string>&lt;Additional&gt;:</string>
+               <string>Cavity angle:</string>
               </property>
              </widget>
             </item>
             <item row="5" column="1">
-             <widget class="QDoubleSpinBox" name="doubleSpinBox_additional">
-              <property name="decimals">
-               <number>3</number>
-              </property>
+             <widget class="QDoubleSpinBox" name="doubleSpinBox_cavityAngle">
               <property name="minimum">
                <double>-9999999.000000000000000</double>
               </property>
@@ -294,6 +273,16 @@
                <double>9999999.000000000000000</double>
               </property>
              </widget>
+            </item>
+            <item row="6" column="0">
+             <widget class="QLabel" name="label_sizeIndex">
+              <property name="text">
+               <string>Size index:</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="1">
+             <widget class="QDoubleSpinBox" name="doubleSpinBox_sizeIndex"/>
             </item>
            </layout>
           </item>
@@ -366,9 +355,6 @@
             <property name="suffix">
              <string> °</string>
             </property>
-            <property name="decimals">
-             <number>5</number>
-            </property>
             <property name="minimum">
              <double>-360.000000000000000</double>
             </property>
@@ -392,9 +378,6 @@
             <property name="suffix">
              <string> °</string>
             </property>
-            <property name="decimals">
-             <number>5</number>
-            </property>
             <property name="minimum">
              <double>-360.000000000000000</double>
             </property>
@@ -417,9 +400,6 @@
             </property>
             <property name="suffix">
              <string> °</string>
-            </property>
-            <property name="decimals">
-             <number>5</number>
             </property>
             <property name="minimum">
              <double>-360.000000000000000</double>
